# routes/api.php
@@ -1,16 +1,29 @@
 <?php
 
+use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\JwtAuthController;
+use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\EstablecimientoController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Validation\ValidationException;
+use App\Models\User;
 
-Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
-    return $request->user();
+// 🔓 CRUD de usuarios (abierto)
+Route::apiResource('users', UserController::class);
+
+
+// Route::post('login', [AuthController::class, 'login']);
+Route::post('login', [JwtAuthController::class, 'login']);
+
+
+Route::middleware(['auth:api'])->group(function () {
+    Route::get('perfil', [JwtAuthController::class, 'perfil']);
+    Route::post('logout', [JwtAuthController::class, 'logout']);
 });
 
-// API Routes for Establecimientos
-// Route::apiResource('establecimientos', EstablecimientoController::class);
-// API Routes for Establecimientos
+// 📦 Rutas de Establecimientos
 Route::get('establecimientos', [EstablecimientoController::class, 'index']);
 Route::get('establecimientos/{id}', [EstablecimientoController::class, 'show']);
 Route::post('establecimientos', [EstablecimientoController::class, 'store']);
